Simple mobile support

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </li>
                     </ul>
                 </div>
-                <span class="contacts">Discord: rafgpio</span>
+                <p class="contacts">Discord: rafgpio</p>
             </section>
         </header>
         <section class="about-me-container">
