--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     </ul>
                 </div>
                 <p class="contacts">Discord: rafgpio</p>
+                <a href="https://discord.gg/T42wNcHbhb" target="_blank">Join discord server!</a>
             </section>
         </header>
         <section class="about-me-container">
